# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  app.py'  app.py.save  app.pyy  app_config.py  check_repository.py  db.py  get_connection.py  index.html  url_repository.py
page_analyzer/templates/: index.html  show.html  view.html
